tests/integrations/basic-fail/tests/actual_tests/foomp2.rs
use basic_fail::add;

fn main() {
    add("42", 3);
    //~^ ERROR: mismatched types
}
